<resources>
    <string name="app_name">Ollivander\'s Wand Shop</string>
    <string name="object_subtitle">Souvenir Store</string>
    <string name="call_action">Call</string>
    <string name="save_action">Save</string>
    <string name="website_action">Website</string>
    <string name="object_location">Hogsmeade\'s main St, Orlando, FL 32819</string>
    <string name="web_url">universalorlando.com</string>
    <string name="opening_hours">Opening hours: 8-22</string>
    <string name="phone_number">+1-407-363-8000</string>
    <string name="ownership">Claim this business</string>
    <string name="suggest">Suggest an edit</string>
    <string name="add_photo">Add a photo</string>
</resources>
